--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,21 +1,19 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        {
-            "name": "Python Debugger: Current File",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${file}",
-            "console": "integratedTerminal"
-        },
+    
+        // {
+        //     "name": "Python: Current File",
+        //     "type": "debugpy",
+        //     "request": "launch",
+        //     "program": "${file}",
+        //     "console": "integratedTerminal"
+        // },
         {
             "name": "Rust: Debug",
             "type": "lldb",
             "request": "launch",
-            "program": "${workspaceRoot}/day09/target/debug/day09.exe",
+            "program": "${workspaceRoot}/day13/target/debug/day13.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceRoot}",
