--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,11 +2,22 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Python Debugger: Current File",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal"
+        },
+        {
             "type": "lldb",
             "request": "launch",
             "name": "Debug Rust",
             "cargo": {
-                "args": ["build", "--manifest-path", "${fileDirname}/../Cargo.toml"]
+                "args": [
+                    "build",
+                    "--manifest-path",
+                    "${fileDirname}/../Cargo.toml"
+                ]
             }
         }
     ]
